--- a/14 th/css.css
+++ b/14 th/css.css
@@ -5,12 +5,18 @@ html,body{
 }
 h1{
     text-align: center;
+ color:wheat;
 }
 :root{
     --black:#000000;
     --red:red;
     --yellow:#FFCE00;
+    --white:white;
     --height:180px;
+    --chocolate:rgb(116, 2, 2);
+    --blue:#0269A6;
+    --lightYellow:#b3910c;
+    /* --width: */
 }
 .flag-Germany{
     height: var(--height);
@@ -32,4 +38,69 @@ h1{
 }
 .yellow{
     background: var(--yellow);
+}
+/* 2 Flag */
+.flag-SwitzerLand{
+   background: var(--red);
+   height: var(--height);
+   width: 21%;
+   margin-left:40%;
+   margin-top:-10px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+position: relative;
+}
+.cross1{
+    height: calc(var(--height)*3/16);
+    width:calc( 230px *5/8);
+    background: var(--white);
+}
+.cross2{
+    height: calc(var(--height)*5/8);
+    width:calc( 230px *3/16);
+    background: var(--white);
+    position: absolute;
+}
+
+/* 3 Flag */
+.flag-Japan{
+    height: 170px;
+    width: calc(var(--height)*5/3);
+    background:var(--white);
+    margin-left: 78%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.circle{
+    height:100px;
+    width:100px;
+    background: var(--chocolate);
+    border-radius: 50%;
+}
+
+/* 4 Flag */
+.flag-Sweden{
+  height: 180px;
+  width:calc(220px * 8/5);
+  background: var(--blue);
+  margin-left: 40%;
+  display: flex;
+  position: relative;
+}
+.vr1{
+    height: 40px;
+    width:352px;
+    background: var(--lightYellow);
+    /* position: absolute; */
+    align-self: center;
+}
+
+.vr2{
+    height: 180px;
+    width:40px;
+    background: var(--lightYellow);
+    position: absolute;
+    margin-left:90px;
 }
