--- a/26 th/style.css
+++ b/26 th/style.css
@@ -25,7 +25,7 @@ body{
     width: 100%;
     height: 70%;
     padding: 20px 30px;
-    border-radius: 5px;
+    border-radius: 20px;
     opacity: 1;
     object-fit: cover;
     object-position: top;
@@ -35,11 +35,14 @@ body{
 
 
 .container #heart{
-    color: rgb(235, 227, 227);
+    color: rgb(189, 179, 179);
     font-size: 40px;
     position: absolute;
     top:45%;
     left:49%;
+    opacity: 0.8;
+    transform: translate(-50%,-50%) scale(0);
+    cursor: pointer;
 }
 .container #user{
     color: rgb(129, 129, 129);
@@ -62,11 +65,28 @@ body{
   display: flex;
   /* padding-bottom: ; */
 }
-.sub-container #like{ 
+/* .sub-container #like{ 
     padding-left: 30px;
   font-size: 15px;
   color: white;
   padding-top: 10px;
+} */
+
+/* Default (unliked) state */
+#like {
+  color: white;  /* or any color you prefer for unliked state */
+  font-size: 15px;
+  padding-left: 30px;
+  cursor: pointer;
+  padding-top: 10px;
+}
+.liked {
+  color: red;
+}
+
+/* Liked state */
+.liked {
+  color: red;
 }
 
 .sub-container #message{ 
